--- a/assets/views/chat.html
+++ b/assets/views/chat.html
@@ -1,70 +1,34 @@
 <div class="panel panel-info">
     <div class="panel-heading" style="color: white; font-weight: 100;">
-        Chatflix<span style="float:right"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
+        Chatflix<span style="float:right"><i ng-click="addFriend()" class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<i
+            ng-click="goToChat()" style="padding-bottom: 3px; border-bottom: 3px dotted white;" class="fa fa-weixin"
+            aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="goToFriends()" class="fa fa-users"
+                                                              aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+            ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i>
+&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
     </div>
-<div class="panel-body">
-    <ul class="media-list">
-        <li class="media">
-            <div class="media-body">
-
-                <div class="media">
-                    <a class="pull-left">
-                        <img class="media-object img-circle" style="width: 30px;" ng-src="{{profilePic}}"/>
-                    </a>
-                    <div class="media-body" style="font-size: 80%;">
-                        Hey {{message}} {{data}}
-                        <br/>
-                        <small class="text-muted">Alex Deo | 23rd June at 5:00pm</small>
+    <div class="panel-body" style="max-height:300px; overflow-y: auto;">
+        <ul class="media-list">
+            <li class="media" ng-repeat="(key, convo) in conversations">
+                <div class="media-body">
+                    <div class="media">
+                        <a class="pull-left">
+                            <img class="media-object img-circle" style="width: 30px;" ng-src="{{profilePic}}"/>
+                        </a>
+                        <div class="media-body" style="font-size: 80%;">
+                            {{convo.message.value}}
+                            <br/>
+                            <small class="text-muted">{{convo.message.timestamp}}</small>
+                        </div>
                     </div>
                 </div>
-
-            </div>
-        </li>
-        <li class="media">
-            <div class="media-body">
-                <div class="media">
-                    <a class="pull-right">
-                        <img class="media-object img-circle" style="width: 30px;" src="assets/img/user.png"/>
-                    </a>
-                    <div class="media-body" style="font-size: 80%;">
-                        Hello
-                        <br/>
-                        <small class="text-muted">Alex Deo | 23rd June at 5:00pm</small>
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li class="media">
-            <div class="media-body">
-                <div class="media">
-                    <a class="pull-left">
-                        <img class="media-object img-circle" style="width: 30px;" src="assets/img/user.png"/>
-                    </a>
-                    <div class="media-body" style="font-size: 80%;">
-                        Hihi what's up?
-                        <br/>
-                        <small class="text-muted">Alex Deo | 23rd June at 5:00pm</small>
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li class="media">
-            <div class="media-body">
-                <div class="media">
-                    <a class="pull-right">
-                        <img class="media-object img-circle" style="width: 30px;" src="assets/img/user.png"/>
-                    </a>
-                    <div class="media-body" style="font-size: 80%;">
-                        Hihi
-                        <br/>
-                        <small class="text-muted">Alex Deo | 23rd June at 5:00pm</small>
-                    </div>
-                </div>
-            </div>
-        </li>
-    </ul>
-</div>
-<div class="panel-footer">
-    <input id="inputForMessage" type="text" class="form-control" style="witdh: auto; font-size: 80%" autofocus/>
-</div>
+            </li>
+        </ul>
+    </div>
+    <div class="panel-footer">
+        <form ng-submit="sendMessage()">
+            <input ng-model="message.content" type="text" class="form-control" style="witdh: auto; font-size: 80%"
+                   placeholder="..." autofocus/>
+        </form>
+    </div>
 </div>
