--- a/assets/views/login.html
+++ b/assets/views/login.html
@@ -2,7 +2,7 @@
     <div class="panel-heading" style="color: white; font-weight: 100;">
         Chatflix
     </div>
-    <div class="panel-body">
+    <div class="panel-body" style="max-height:300px; overflow-y: auto;">
         <div class="row">
             <div class="col-md-4 text-center">
                 <a class="text-center">
@@ -12,7 +12,6 @@
                 </a>
             </div>
         </div>
-        <br>
         <div class="row">
             <div class="col-md-4 text-center">
                 <a class="text-center">
@@ -20,6 +19,12 @@
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <a class="text-center">
+                    <i style="font-size: 60%">How do I use this extension?</i>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
-
