--- a/assets/views/friends.html
+++ b/assets/views/friends.html
@@ -1,6 +1,27 @@
 <div class="panel panel-info">
     <div class="panel-heading" style="color: white; font-weight: 100;">
-        Chatflix<span style="float:right"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
+        Chatflix<span style="float:right"><i ng-click="addFriend()" class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<i
+            ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+            ng-click="goToFriends()" style="padding-bottom: 3px; border-bottom: 3px dotted white;" class="fa fa-users"
+            aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="settings()" class="fa fa-cog"
+                                                              aria-hidden="true"></i>
+&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
     </div>
-    You have no friends loser.
+    <div class="panel-body" style="max-height:300px; overflow-y: auto;">
+        <ul class="media-list">
+            <div class="media-body" ng-repeat="(key, data) in friends" style="margin-bottom: 10px;">
+                <div class="media">
+                    <a class="pull-left">
+                        <img class="media-object img-circle" style="width: 30px;" ng-src="{{data.friend.profilePic}}"/>
+                    </a>
+                    <div class="media-body" style="font-size: 80%;">
+                        {{data.friend.name}}
+                        <br/>
+                        <small class="text-muted">Watching: {{data.friend.watching}}</small>
+                    </div>
+                </div>
+            </div>
+
+        </ul>
+    </div>
 </div>
