--- a/assets/views/login.html
+++ b/assets/views/login.html
@@ -1,12 +1,12 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100;">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
         Chatflix
     </div>
     <div class="panel-body" style="max-height:300px; overflow-y: auto;">
         <div class="row">
             <div class="col-md-4 text-center">
                 <a class="text-center">
-                    <button ng-click="goToNewAccount()" type="button" class="btn btn-default navbar-btn">Create an
+                    <button tabindex="-1" ng-click="goToNewAccount()" type="button" class="btn btn-default navbar-btn">Create an
                         account
                     </button>
                 </a>
@@ -15,14 +15,14 @@
         <div class="row">
             <div class="col-md-4 text-center">
                 <a class="text-center">
-                    <button ng-click="goToLogin()" type="button" class="btn btn-default navbar-btn">Sign in</button>
+                    <button tabindex="-1" ng-click="goToLogin()" type="button" class="btn btn-default navbar-btn">Sign in</button>
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 text-center">
                 <a class="text-center">
-                    <i style="font-size: 60%">How do I use this extension?</i>
+                    <i style="font-size: 60%; font-family:Verdana;">How do I use this extension?</i>
                 </a>
             </div>
         </div>
