--- a/assets/views/subviews/existingAccount.html
+++ b/assets/views/subviews/existingAccount.html
@@ -1,10 +1,10 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100;">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
         Chatflix
     </div>
     <div class="panel-body">
         <form>
-            <div id="mydiv" ng-show="loading" class="text-center">
+            <div ng-show="loading" class="text-center">
                 <img src="assets/img/box.gif"/>
             </div>
             <span style="color: darkred" ng-show="error">Invalid credentials</span>
