--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -910,18 +910,18 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #428bca;
-  text-decoration: none;
+  /*color: #428bca;*/
+  /*text-decoration: none;*/
 }
 a:hover,
 a:focus {
-  color: #2a6496;
-  text-decoration: underline;
+  /*color: #2a6496;*/
+  /*text-decoration: underline;*/
 }
 a:focus {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+  /*outline: thin dotted;*/
+  /*outline: 5px auto -webkit-focus-ring-color;*/
+  /*outline-offset: -2px;*/
 }
 figure {
   margin: 0;
@@ -960,7 +960,7 @@ img {
   border-radius: 50%;
 }
 hr {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #eee;
@@ -4998,7 +4998,10 @@ a.list-group-item-danger.active:focus {
           box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 .panel-body {
-  padding: 8px;
+  padding-left: 8px;
+  padding-bottom: 8px;
+  padding-right: 8px;
+  padding-top: 0px;
 }
 .panel-heading {
   padding: 10px 15px;
