--- a/assets/views/friendSearch.html
+++ b/assets/views/friendSearch.html
@@ -1,54 +1,73 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100;">
-        Chatflix<span style="float:right"><i ng-click="addFriend()"
-                                             style="padding-bottom: 3px; border-bottom: 3px dotted white;"
-                                             class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<i
-            ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
-            ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
-            ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i>
-&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
+        Chatflix
+        <span style="float:right;">
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="addFriend()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-user-plus" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
+        </span>
     </div>
-    <div class="panel-body" style="max-height:300px; overflow-y: auto;">
-        <ul class="media-list">
-            <div class="media-body">
-                <form>
-
-                    <div class="form-group">
-                        <label for="friendSearch">Search by email address</label>
-                        <input type="email" class="form-control" id="friendSearch" placeholder="Email"
-                               ng-model="search">
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <a class="text-center">
-                            <button ng-click="searchFriend(search)" type="button" class="btn btn-default navbar-btn">
-                                Submit
-                            </button>
+    <div class="panel-body" style="max-height:300px; overflow-y: auto; word-break:break-all;">
+        <b Style="margin-top: 10px; margin-left: 70px;">Add a friend</b>
+        <div ng-show="loading" class="text-center">
+            <img src="assets/img/box.gif"/>
+        </div>
+        <div class="media-body">
+            <form>
+                <span style="color: darkred; font-size: 80%" class="text-center" ng-show="error">
+                    Could not find an account associated with that username.
+                </span>
+                <div class="form-group">
+                    <br>
+                    <label for="friendSearch">Search by username</label>
+                    <input style="font-family:Verdana;" type="text" class="form-control" id="friendSearch" placeholder="Username"
+                           ng-model="username">
+                </div>
+                <div class="col-md-4 text-center">
+                    <a class="text-center">
+                        <button ng-click="searchFriend(username)" type="submit" class="btn btn-default navbar-btn">
+                            Search
+                        </button>
+                    </a>
+                </div>
+            </form>
+            <span style="color: green; font-size: 80%" class="text-center" ng-show="success">
+                                        <i class="fa fa-check" aria-hidden="true"></i>
+                        Your friend will appear in your friend  list as soon as they accept your request.
+            </span>
+        </div>
+        <ul class="media-list" ng-show="!success" style="font-family:Verdana;">
+            <li class="media" ng-repeat="(key, data) in result track by $index">
+                <span style="font-size: 80%; margin-left: 40px;" class="text-center" ng-show="key == uid">
+                        You cannot add yourself. <i class="fa fa-smile-o" aria-hidden="true"></i>
+                </span>
+                <div class="media-body" ng-show="key != uid">
+                    <hr>
+                    <div class="media">
+                        <a class="pull-left">
+                            <img class="media-object img-circle" style="width: 30px;" ng-src="{{data.profilePic}}"/>
                         </a>
-                    </div>
-                </form>
-            </div>
-            <br>
-            <ul class="media-list">
-                <li class="media" ng-repeat="(key, data) in result track by $index">
-                    <div class="media-body">
-                        <div>
-                            <a class="pull-left" style="padding-top:10px">
-                                <img class="media-object img-circle" style="width: 30px;" ng-src="{{data.profilePic}}"/>
-                            </a>
-                            <div style="font-size: 80%;">
-                                <span style="padding-left:5px" class="text-left">{{data.name}}</span>
-                                <span class="text-right">
-                                    <button ng-click="addFriend(data.name, data.profilePic)" type="button"
-                                            class="text-right btn btn-default navbar-btn">
-                                        <i class="fa fa-user-plus" aria-hidden="true"></i>
-                                    </button>
-                                </span>
-                            </div>
+                        <div class="media-body" style="font-size: 80%;">
+                                                        <span style="float:left; margin-top: 5px;">
+                        {{data.username}}
+                                                            </span>
+                            <span style="float:right; margin-top: -8px;">
+                                <button ng-click="addFriend(key, data.username, data.profilePic)" type="button"
+                                        class="text-right btn btn-default navbar-btn">
+                                    <i class="fa fa-user-plus" aria-hidden="true"></i>
+                                </button>
+                        </span>
                         </div>
 
                     </div>
-                </li>
-            </ul>
+
+                </div>
         </ul>
     </div>
 </div>
