--- a/assets/views/friends.html
+++ b/assets/views/friends.html
@@ -1,27 +1,43 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100;">
-        Chatflix<span style="float:right"><i ng-click="addFriend()" class="fa fa-user-plus" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<i
-            ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
-            ng-click="goToFriends()" style="padding-bottom: 3px; border-bottom: 3px dotted white;" class="fa fa-users"
-            aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="settings()" class="fa fa-cog"
-                                                              aria-hidden="true"></i>
-&nbsp;&nbsp;&nbsp;&nbsp;<i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></span>
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
+        Chatflix
+        <span style="float:right;">
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="addFriend()" class="fa fa-user-plus" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-users" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
+            &nbsp;&nbsp;
+            <a href="" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
+        </span>
     </div>
-    <div class="panel-body" style="max-height:300px; overflow-y: auto;">
+    <div class="panel-body" style="max-height:300px; overflow-y: auto; word-break:break-all;">
         <ul class="media-list">
-            <div class="media-body" ng-repeat="(key, data) in friends" style="margin-bottom: 10px;">
-                <div class="media">
-                    <a class="pull-left">
-                        <img class="media-object img-circle" style="width: 30px;" ng-src="{{data.friend.profilePic}}"/>
-                    </a>
-                    <div class="media-body" style="font-size: 80%;">
-                        {{data.friend.name}}
-                        <br/>
-                        <small class="text-muted">Watching: {{data.friend.watching}}</small>
+            <b Style="margin-left: 70px;">Friends List</b>
+            <div ng-show="loading" class="text-center">
+                <img src="assets/img/box.gif"/>
+            </div>
+            <br ng-show="emptyResult">
+            <i style="font-family:Verdana; font-size: 80%; margin-left: 20px;" ng-show="emptyResult">You haven't added any friends yet.</i>
+            <li class="media" ng-repeat="(key, data) in friends" style="font-family:Verdana; margin-bottom: 10px;">
+                <div class="media-body" ng-repeat="friend in data">
+                    <div class="media" ng-show="friend.username" ng-click="chatWithFriend(key)">
+                        <a class="pull-left">
+                            <img class="media-object img-circle" style="width: 30px;"
+                                 ng-src="{{friend.profilePic}}"/>
+                        </a>
+                        <div class="media-body" style="font-size: 80%;">
+                            <b>{{friend.username}}</b>
+                            <br/>
+                            <small class="text-muted"><i class="fa fa-circle" aria-hidden="true" style="color: #0C0;">
+                            </i> Watching: {{friend.watching}}
+                            </small>
+                        </div>
                     </div>
                 </div>
-            </div>
-
+            </li>
         </ul>
     </div>
 </div>
