--- a/assets/views/subviews/passwordChange.html
+++ b/assets/views/subviews/passwordChange.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100;">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
         Chatflix
     </div>
     <div class="panel-body">
