--- a/assets/views/friendSearch.html
+++ b/assets/views/friendSearch.html
@@ -1,16 +1,16 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
         Chatflix
         <span style="float:right;">
-            <a href="" tabindex="-1" style="color: white;"><i ng-click="addFriend()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-user-plus" aria-hidden="true"></i></a>
+            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="addFriend()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-user-plus" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
+            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
+            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
+            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
         </span>
     </div>
     <div class="panel-body" style="max-height:300px; overflow-y: auto; word-break:break-all;">
