--- a/assets/views/login.html
+++ b/assets/views/login.html
@@ -1,21 +1,21 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
         Chatflix
     </div>
     <div class="panel-body" style="max-height:300px; overflow-y: auto;">
         <div class="row">
             <div class="col-md-4 text-center">
-                <a class="text-center">
-                    <button tabindex="-1" ng-click="goToNewAccount()" type="button" class="btn btn-default navbar-btn">Create an
-                        account
+                <a href="#/newAccount" class="text-center">
+                    <button type="button" class="btn btn-default navbar-btn">
+                        Create an account
                     </button>
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col-md-4 text-center">
-                <a class="text-center">
-                    <button tabindex="-1" ng-click="goToLogin()" type="button" class="btn btn-default navbar-btn">Sign in</button>
+                <a tabindex="-1" href="#/existingAccount" class="text-center">
+                    <button type="button" class="btn btn-default navbar-btn">Sign in</button>
                 </a>
             </div>
         </div>
