--- a/assets/views/subviews/newAccount.html
+++ b/assets/views/subviews/newAccount.html
@@ -1,5 +1,5 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
         Chatflix
     </div>
     <div class="panel-body">
@@ -25,7 +25,9 @@
             </div>
 
             <button type="submit" ng-click="create(user)" class="btn btn-default">Create account</button>
-            <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
+            <a tabindex="-1" href="#/login">
+                <button type="submit" class="btn btn-default">Cancel</button>
+            </a>
             <br>
             <br>
             <i style="font-size: 60%">By clicking Create Account, you agree to our Terms and that you have read our Data
