--- a/assets/views/subviews/newAccount.html
+++ b/assets/views/subviews/newAccount.html
@@ -25,9 +25,7 @@
             </div>
 
             <button type="submit" ng-click="create(user)" class="btn btn-default">Create account</button>
-            <a tabindex="-1" href="#/login">
-                <button type="submit" class="btn btn-default">Cancel</button>
-            </a>
+            <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
             <br>
             <br>
             <i style="font-size: 60%">By clicking Create Account, you agree to our Terms and that you have read our Data
