--- a/assets/views/chat.html
+++ b/assets/views/chat.html
@@ -1,16 +1,21 @@
 <div class="panel panel-info">
-    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;"">
+    <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
         Chatflix
         <span style="float:right;">
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="addFriend()" class="fa fa-user-plus" aria-hidden="true"></i></a>
+            <a tabindex="-1" style="color: white;"><i ng-click="addFriend()" class="fa fa-user-plus"
+                                                      aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToChat()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-weixin" aria-hidden="true"></i></a>
+            <a tabindex="-1" style="color: white;"><i ng-click="goToChat()"
+                                                      style="padding-bottom: 3px; border-bottom: 1px solid white;"
+                                                      class="fa fa-weixin" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
+            <a tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users"
+                                                      aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
+            <a tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog"
+                                                      aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
         </span>
     </div>
     <div class="panel-body"
