--- a/assets/views/friendSearch.html
+++ b/assets/views/friendSearch.html
@@ -2,15 +2,17 @@
     <div class="panel-heading" style="color: white; font-weight: 100; margin-bottom: 5px;">
         Chatflix
         <span style="float:right;">
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="addFriend()" style="padding-bottom: 3px; border-bottom: 1px solid white;" class="fa fa-user-plus" aria-hidden="true"></i></a>
+            <a style="color: white;"><i ng-click="addFriend()"
+                                        style="padding-bottom: 3px; border-bottom: 1px solid white;"
+                                        class="fa fa-user-plus" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
+            <a style="color: white;"><i ng-click="goToChat()" class="fa fa-weixin" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
+            <a style="color: white;"><i ng-click="goToFriends()" class="fa fa-users" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
+            <a style="color: white;"><i ng-click="settings()" class="fa fa-cog" aria-hidden="true"></i></a>
             &nbsp;&nbsp;
-            <a href="javascript:void(0)" tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
         </span>
     </div>
     <div class="panel-body" style="max-height:300px; overflow-y: auto; word-break:break-all;">
@@ -43,11 +45,11 @@
             </span>
         </div>
         <ul class="media-list" ng-show="!success" style="font-family:Verdana;">
-            <li class="media" ng-repeat="(key, data) in result track by $index">
-                <span style="font-size: 80%; margin-left: 40px;" class="text-center" ng-show="key == uid">
+            <li class="media" ng-repeat="(key, data) in result">
+                <span style="font-size: 80%; margin-left: 40px;" class="text-center" ng-show="data.uid == uid">
                         You cannot add yourself. <i class="fa fa-smile-o" aria-hidden="true"></i>
                 </span>
-                <div class="media-body" ng-show="key != uid">
+                <div class="media-body" ng-show="data.uid != uid">
                     <hr>
                     <div class="media">
                         <a class="pull-left">
@@ -55,10 +57,10 @@
                         </a>
                         <div class="media-body" style="font-size: 80%;">
                                                         <span style="float:left; margin-top: 5px;">
-                        {{data.username}}
+                        {{data.value}}
                                                             </span>
                             <span style="float:right; margin-top: -8px;">
-                                <button ng-click="addFriend(key, data.username, data.profilePic)" type="button"
+                                <button ng-click="addFriend(data.uid, data.value, data.profilePic)" type="button"
                                         class="text-right btn btn-default navbar-btn">
                                     <i class="fa fa-user-plus" aria-hidden="true"></i>
                                 </button>
