--- a/assets/views/friendSearch.html
+++ b/assets/views/friendSearch.html
@@ -41,7 +41,7 @@
             </form>
             <span style="color: green; font-size: 80%" class="text-center" ng-show="success">
                                         <i class="fa fa-check" aria-hidden="true"></i>
-                        Your friend will appear in your friend  list as soon as they accept your request.
+                        You will get notified when your friend accepts your request.
             </span>
         </div>
         <ul class="media-list" ng-show="!success" style="font-family:Verdana;">
