--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -10,6 +10,9 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+.toppy {
+  margin-top: 10px;
+}
 body {
   margin: 0;
 }
