--- a/assets/views/chatWithFriend.html
+++ b/assets/views/chatWithFriend.html
@@ -15,34 +15,38 @@
             <a tabindex="-1" style="color: white;"><i ng-click="logout()" class="fa fa-sign-out" aria-hidden="true"></i></a>
         </span>
     </div>
+    <div class="panel-heading" style="background-color:white; font-weight: 100; border-bottom: 1px solid #ddd">
+
+        <div style="margin-top: 10px;">
+            <div class="media-body">
+                <div class="media">
+                    <a class="pull-left">
+                        <img class="media-object img-circle" style="width: 30px;"
+                             ng-src="{{result.profilePic}}"/>
+                    </a>
+                    <div class="media-body" style="font-size: 80%;">
+                        <b style="font-family:Verdana;">{{result.username}}</b>
+                        <br/>
+                        <small class="text-muted"><i class="fa fa-circle" aria-hidden="true" style="color: #0C0;">
+                        </i> <span style="font-family:Verdana;">Watching: {{result.watching}}</span>
+                        </small>
+                    </div>
+                    <button ng-click="goToChat()" class="btn btn-default pull-right" style="margin-top: -30px;">
+                        <i
+                                class="fa fa-times" aria-hidden="true"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="panel-body"
          style="max-height:300px; padding-top: 0px !important; overflow-y: auto; word-wrap: break-word" scroll-glue>
-        <ul class="media-list">
+        <div ng-show="loading" class="text-center">
+            <img src="assets/img/box.gif"/>
+        </div>
+        <ul class="media-list" style="margin-top: 10px;">
             <div ng-show="loading" class="text-center">
                 <img src="assets/img/box.gif"/>
             </div>
-            <li class="media" style="margin-top: 10px;">
-                        <div class="media-body">
-                        <div class="media">
-                        <a class="pull-left">
-                            <img class="media-object img-circle" style="width: 30px;"
-                                 ng-src="{{result.profilePic}}"/>
-                        </a>
-                        <div class="media-body" style="font-size: 80%;">
-                            <b style="font-family:Verdana;">{{result.username}}</b>
-                            <br/>
-                            <small class="text-muted"><i class="fa fa-circle" aria-hidden="true" style="color: #0C0;">
-                            </i> <span style="font-family:Verdana;">Watching: {{result.watching}}</span>
-                            </small>
-                        </div>
-                            <button ng-click="goToChat()" class="btn btn-default pull-right" style="margin-top: -30px;">
-                                <i
-                                        class="fa fa-times" aria-hidden="true"></i></button>
-                                    <hr>
-
-                        </div>
-                </div>
-            </li>
             <li class="media-body" ng-repeat="(key, convo) in conversations" style="font-family:Verdana;">
                 <div class="media" ng-show="convo.value">
                     <div ng-show="convo.value == '[]{}[]{}[]--'" class="media-body"
